--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,120 @@
-ul,li{
+ul,
+li {
     list-style: none;
     padding: 10px;
     margin: 0;
     gap: 24px;
 }
-a{
+
+a {
     text-decoration: none;
     display: inline-block;
     color: inherit;
     padding: 10px;
 }
- 
-.headr{
-    
+
+.heading {
+    text-align: center;
+    max-width: 700px;
+    margin-bottom: 20px;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.sub-title {
+    text-align: center;
+    margin: 0 auto;
+    max-width: 700px;
+    margin-bottom: 35px;
+
+}
+/* header */
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+    flex-wrap: wrap;
     background: whitesmoke;
-    padding: 10px 0;
+    color: #506a85;
     position: fixed;
     width: 100%;
     left: 0;
     top: 0;
 }
-.header{
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    flex-wrap: wrap;
+
+.navbar-nav {
+   display: flex;
+   flex-direction: row;
+   gap: 10px;
 }
+
+.navbar-nav a,
+.nav-ul-mobile a {
+   text-decoration: none;
+}
+/* responsive */
+.nav-toggle span {
+   width: 35px;
+   height: 5px;
+   background:  #506a85;
+   border-radius: 13px;
+   border: solid 0.01px  #506a85;
+   transition: 0.5s all;
+   position: relative;
+   display: inline-block;
+   display: none;
+}
+
+.nav-toggle {
+   padding: 5px;
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   gap: 8px;
+}
+
+.nav-toggle.toggle .one {
+   transform: rotate(45deg);
+   top: 15px;
+}
+
+.nav-toggle.toggle .two {
+   opacity: 0;
+}
+
+.nav-toggle.toggle .three {
+   transform: rotate(-45deg);
+   bottom: 11px;
+}
+
+.nav2-mobile {
+   position: fixed;
+   background: white;
+   right: 0;
+   top: 0;
+   width: 50%;
+   align-items: center;
+   justify-content: center;
+   z-index: 2;
+   transition: 0.3s ease-in;
+   opacity: 0;
+   visibility: hidden;
+   height: 100vh;
+   display: flex;
+   align-items: center;
+}
+
+.nav-ul-mobile li {
+   list-style: none;
+   padding: 20px;
+}
+
 /* hero */
-#hero{
+#hero {
     height: 100vh;
     width: 100%;
-    background:radial-gradient(rgba(0, 0, 0, 0.534),rgba(255, 255, 255, 0)), url('/img/main.png');
+    background: radial-gradient(rgba(0, 0, 0, 0.534), rgba(255, 255, 255, 0)), url('/img/main.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -39,7 +123,8 @@ a{
     align-items: center;
     justify-content: center;
 }
-.hero-content{
+
+.hero-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,83 +132,86 @@ a{
     max-width: 800px;
     padding: 0 15px;
     text-align: center;
+    max-width: 700px;
 }
+
 .hero-content h1,
-.hero-content a{
+.hero-content a {
     text-transform: uppercase;
 }
-.button{
-    background-color: rgb(127, 214, 222);
+
+.button {
+    background-color: rgb(60, 193, 164);
     color: white;
-    padding: 10px;
-    animation: rotate 2.9s linear;
+    padding: 10px 15px;
+    border: none;
+
 }
+
 /* about */
-#about{
+#about {
     padding: 70px 0;
 }
-.about-content{
+
+.about-content {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.card:hover{
-    background-color: rgb(226, 236, 238);
+
+.card:hover {
+    background-color: rgba(227, 246, 241, 0.673);
     transition: 0.3s ease-in-out;
 }
-.heading{
-    font-size: 35px;
-    font-weight: 600;
-}
-.sub-heading{
-    font-weight: 400;
-}
-#about .heading
-#about .sub-heading{
-    text-align: center;
-    max-width: 800px;
-}
-.card{
+
+.card {
     border-radius: 15px;
     padding: 10px;
     flex-direction: row;
     align-items: flex-start;
     gap: 10px;
 }
+
 /* works */
-#works{
+#works {
     padding: 70px;
 }
 
-.works-content{
+.works-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-    
+    padding: 30px 0;
+
 }
-#works{
-    background-color: rgb(239, 244, 250);
-    
-    
+
+#works {
+    background-color: rgb(239, 239, 239);
+
+
 }
-.cap{
+
+.box {
     text-align: center;
-    
+    padding: 18px 0;
 }
-.images1{
+
+.images1 {
     background: aliceblue;
 }
+
 /* contact */
-#contact{
+#contact {
     padding: 70px;
 }
-.contact-details{
+
+.contact-details {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.form{
+
+.form {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -133,8 +221,9 @@ a{
     justify-content: center;
     text-align: center;
 }
+
 .form input,
-.form textarea{
+.form textarea {
     width: 100%;
     max-width: 600px;
     padding: 10px;
@@ -144,46 +233,42 @@ a{
     outline: none;
 }
 
+.ctct-btn {
+    background-color: rgb(60, 193, 164);
+    color: white;
+    border: none;
+    padding: 10px 26px;
+
+}
+
 /* footer */
 
-footer{
+footer {
 
     background-color: rgb(64 78 93);
     color: white;
 }
-.ftr-last{
-    
+
+.ftr-last {
     padding: 10px;
     color: white;
     background-color: rgb(31 43 56);
-}
-
-.ftr-last .container{
-    display: flex;
-    flex-direction: row;
-    gap: 90px;
-}
-.footer-title{
-    font-size: 16px;
-}
-.ftr-description{
-    font-size: 13px;
+    text-align: center;
 }
 .ftr-last h6{
-    display: flex;
-    align-items: center;
+    font-weight: 300;
 }
-@keyframes rotate {
-    0%{
-        background: rgb(127,214,222) ;
-        transform: translateX(-100vw);
-    }
-    50%{
-        background: rgb(191, 191, 88);
-        border-radius: 50px;
-        transform: translateX();
-    }
-    100%{
-        transform: translateX(200vw);
-    }
+
+.footer-title {
+    font-size: 16px;
+}
+
+.ftr-description {
+    font-size: 13px;
+}
+
+.submit-btn {
+    background-color: rgb(60, 193, 164);
+    color: white;
+    border: none;
 }
